# crawler_LLM_job_analysis

./: .env.example  LECENSE  README.md  pyproject.toml
src/: analysis.py  app.py  config.py  crawler_104.py  openai_service.py
